--- a/springmvcfirst/.settings/org.eclipse.wst.common.component
+++ b/springmvcfirst/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="springmvcfirst">
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="springmvcfirst"/>
         <property name="java-output-path" value="/springmvcfirst/build/classes"/>
     </wb-module>
