--- a/springmvc_mybatis/.settings/org.eclipse.wst.common.component
+++ b/springmvc_mybatis/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="springmvc_mybatis">
         <wb-resource deploy-path="/" source-path="/WebRoot" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
         <property name="context-root" value="springmvc_mybatis"/>
         <property name="java-output-path" value="/springmvc_mybatis/build/classes"/>
     </wb-module>
